--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,9 @@ name: dll110
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 
+show_exceprts: true
+
 paginate: 5
 paginate_path: "/blog/page:num/"
+
+theme: minima
