--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,11 @@ google_analytics: G-K0J66HDZHY
 
 # Build settings
 theme: minima
+remote_theme: jekyll/minima
+
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
